--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
 <!-- Use DrawerLayout as root container for activity -->
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                         xmlns:app="http://schemas.android.com/apk/res-auto"
+                                        xmlns:tools="http://schemas.android.com/tools"
                                         android:id="@+id/drawer_layout"
                                         android:layout_width="match_parent"
                                         android:layout_height="match_parent"
@@ -11,19 +12,33 @@
     <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
 
     <android.support.constraint.ConstraintLayout
-            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".MainActivity">
+
+        <android.support.v7.widget.Toolbar
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="?attr/colorPrimary"
+                android:theme="?attr/actionBarTheme"
+                android:minHeight="?attr/actionBarSize"
+                android:id="@+id/toolbar"
+                app:layout_constraintTop_toTopOf="parent"/>
+
         <fragment
                 android:name="androidx.navigation.fragment.NavHostFragment"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="0dp"
                 app:navGraph="@navigation/routes"
                 app:defaultNavHost="true"
-                tools:layout_editor_absoluteY="0dp"
-                tools:layout_editor_absoluteX="0dp"
-                android:id="@+id/navFragment"/>
+                android:id="@+id/navFragment" android:layout_marginBottom="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/toolbar"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:gravity="left" android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
+                android:layout_marginRight="8dp" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"/>
+
     </android.support.constraint.ConstraintLayout>
 
     <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
@@ -36,6 +51,7 @@
             android:fitsSystemWindows="true"
             app:menu="@menu/drawer_menu"
     />
+
 
 </android.support.v4.widget.DrawerLayout>
 
