--- a/app/src/main/res/layout/fragment_fragment3.xml
+++ b/app/src/main/res/layout/fragment_fragment3.xml
@@ -8,10 +8,9 @@
               android:orientation="vertical"
               android:gravity="bottom">
 
-
     <android.support.design.widget.BottomNavigationView
             android:id="@+id/bottom_nav_view"
-            app:menu="@menu/bottom_nav_menu"
+            app:menu="@menu/bottom_nav_menu_3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
