--- a/app/src/main/res/menu/top_right_menu.xml
+++ b/app/src/main/res/menu/top_right_menu.xml
@@ -4,10 +4,15 @@
             android:id="@+id/fragment1"
             android:icon="@drawable/ic_launcher_background"
             android:title="Фрагмент 1"/>
+
     <item
             android:id="@+id/fragment2"
             android:icon="@drawable/ic_launcher_background"
             android:title="Фрагмент 2"/>
+    <item
+            android:id="@+id/fragment3"
+            android:icon="@drawable/ic_launcher_background"
+            android:title="Фрагмент 3"/>
 </menu>
 
 
