--- a/app/src/main/res/layout/fragment_fragment3.xml
+++ b/app/src/main/res/layout/fragment_fragment3.xml
@@ -10,7 +10,7 @@
 
     <android.support.design.widget.BottomNavigationView
             android:id="@+id/bottom_nav_view"
-            app:menu="@menu/bottom_nav_menu_3"
+            app:menu="@menu/bottom_nav_menu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
